--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -2,15 +2,16 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
     width: 100%;
-    color: rgb(78, 76, 76);
-   
+    color: rgb(53, 52, 52);
+   font-size: 1rem;
+   font-weight: 600;
 }
 
 
 header {
 
     background-color:#5995ed;
-    color: #FFFFFF;
+    color: white;
     padding: 10px;
     margin-top: 1rem;
 }
@@ -102,6 +103,8 @@ nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    font-size: 1.25rem;
+    font-weight: 600;
     align-items: center;
 }
 
@@ -158,7 +161,7 @@ nav ul li a:hover {
     font-size: 2rem;
     margin: 0px;
 
-    color: rgb(78, 76, 76);
+    color: rgb(53, 52, 52);
 }
 
 .section2 {
@@ -166,7 +169,7 @@ nav ul li a:hover {
     margin: 1rem;
 
     padding: 1rem;
-    color: rgb(78, 76, 76);
+    color: rgb(53, 52, 52);
 }
 
 .section2 h3 {
