add banner&title, color change, debug

--- a/lesson13/main.css/large.css
+++ b/lesson13/main.css/large.css
@@ -6,7 +6,12 @@
     
     font-size: 3rem;
     }
-    
+    h5 {
+        font-size: 5rem;
+      }
+      h6 {
+        font-size: 3.5rem;
+      }
     nav ul li a{padding: .6rem 1rem;} 
     iframe {
         max-width: 950px;
