--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -9,14 +9,11 @@ body {
 
 
 header {
-
-    background-color:#5995ed;
-    color: white;
-    padding: 10px;
-    margin-top: 1rem;
+    color: rgb(53, 52, 52);
 }
 
 .icon {
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +31,17 @@ header {
     flex-direction: column;
 }
 
-
+.banner {
+    position: relative;
+  text-align: center;
+  color: white;
+}
+.title  {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 h1 {
     font-family: 'Galada', cursive;
     font-weight: 300;
@@ -46,19 +53,10 @@ h1 {
 
 h2 {
     text-align: center;
-    font-weight: 500;
+    font-weight: 700;
     margin: .5rem;
     padding: 1rem;
    
-}
-
-h4 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-weight: 200;
-    font-style: italic;
-    margin: auto;
-    
 }
 
 h3 {
@@ -68,6 +66,23 @@ h3 {
     font-style: italic;
 }
 
+h4 {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    margin: auto;
+}
+h5 {
+    font-size: 2.5rem;
+    font-family: 'Galada', cursive;
+    font-weight: 200;
+}
+h6 {
+    font-size: 1.5rem;
+    font-family: 'Galada', cursive;
+    font-weight: 200;
+}
 ul,
 li {
     list-style-type: none;
@@ -76,7 +91,7 @@ li {
 
 nav {
     margin: .25rem auto;
-    background-color: #5995ed;
+    background-color:rgb(53, 52, 52);
     font-family: 'Roboto', sans-serif;
 
 }
@@ -84,7 +99,7 @@ nav {
 .navigation {
     list-style: none;
     text-align: center;
-    padding: 0;
+    padding: 0px;
 }
 
 .navigation li:first-child {
@@ -113,16 +128,16 @@ nav ul li a {
     padding: .8rem 2%;
     text-decoration: none;
     color: white;
-    font-family: 'Roboto', sans-serif;
+   
 
 }
 
-nav ul li a.active {
+.nav ul li a.active {
     background-color: #FFA630;
 }
 
 nav ul li a:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(238, 201, 122, 0.493);
 }
 
 /*nav stops here*/
@@ -131,7 +146,7 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #84DCC6;
+   background-color: #9EE5DD;
 
 }
 
@@ -169,7 +184,7 @@ nav ul li a:hover {
     margin: 1rem;
 
     padding: 1rem;
-    color: rgb(53, 52, 52);
+    color: rgb(78, 76, 76);
 }
 
 .section2 h3 {
@@ -187,19 +202,19 @@ nav ul li a:hover {
     font-size: 4rem;
     color: white;
     text-align: right;
-
+    color: rgb(53, 52, 52);
 }
 
 .forecast {
     display: flex;
-    width: 100%;
-    margin: 1rem;
-    padding: 1rem;
-
+   margin: 1rem;
+    
+    background-color: #bce0dd;
 }
 
 .contentbox {
-    margin-left: 1rem;
+   padding-left: 1rem;
+    
 }
 
 .flex-col {
@@ -233,8 +248,8 @@ img {
 
 .gallery {
     margin: 0px auto;
-    background-color:#84DCC6 ;
-
+    background-color:#9EE5DD ;
+text-align: center;
 }
 
 figure {
@@ -258,7 +273,7 @@ figcaption {
     justify-content: center;
     max-width: 100%;
     margin: 1rem auto;
-   
+   background-color: #9EE5DD;
     padding: 1rem;
 }
 
@@ -331,16 +346,7 @@ tfoot tr td {
 }
 
 /* contact and map location */
-.section3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 900px;
-    margin: 0 auto;
-   
-    padding: 2rem 2rem 1rem 1rem;
 
-}
 
 .contact {
     padding: 1rem;
@@ -351,7 +357,7 @@ tfoot tr td {
 
 #social-media {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #social-media img {
@@ -367,7 +373,7 @@ tfoot tr td {
 
 /* the form starts here*/
 .agreement {
-    background-color: #84DCC6;
+    background-color: #9EE5DD;
     padding-bottom: 1rem;
 }
 .agreement ul {
@@ -472,7 +478,7 @@ textarea {
 
 /* confirmation page*/
 .confirmation {
-    background-color: #84DCC6;
+    background-color: #9EE5DD;
 }
 
 .confirmation p {
@@ -566,7 +572,7 @@ max-width: 350px;
 }
 .map {
     text-align: center;
-    background-color:   #84DCC6;
+    background-color:   #9EE5DD
 
 }
 .locale h2 {
@@ -580,7 +586,7 @@ footer {
     margin: 8px auto;
     text-align: center;
     max-width: 100%;
-    background-color: #5995ed;
+    background-color: rgb(53, 52, 52);
     color: #FFFFFF;
 
 }
