--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -526,7 +526,9 @@ textarea {
     margin: 2rem .5rem .5rem 1rem;
     line-height: 1.2em;
 }
-
+#yellow{
+    background-color: #FFDF6E;
+}
 .ruin-img {
     display: flex;
     width: 50%;
