start of new review page

--- a/lesson12/main-css/small.css
+++ b/lesson12/main-css/small.css
@@ -13,7 +13,7 @@ picture img {
 }
 header,
 footer {
-    background-color:  #5995ed;
+    background-color:  rgb(53, 52, 52);
     color: #FFFFFF;
     display: flex;
     flex-flow: column;
@@ -95,7 +95,7 @@ nav a:hover {
     
 
 .sky {
-    background-color: #84DCC6;
+    background-color: #9EE5DD;
     padding: 1rem;
     
   
@@ -125,22 +125,25 @@ nav a:hover {
     padding: 1rem;
 }
 #sample1 {
-    background-color: #5995ed;
-    color: #FFFFFF;
+   background-color: white;
+    color: rgb(53, 52, 52);
     font-family: 'Galada', cursive;
     font-size: 2rem;
 }
 
 #sample2 {
     font-size: 1rem;
-    background-color:#84DCC6;
+    background-color:#9EE5DD;
 }
 
 #sample3 {
     background-color: #FFA630;
     font-weight: 100;
 }
-
+#dark {
+    background-color:rgb(53, 52, 52); 
+    color: white;
+}
 table,
 th,
 td {
