--- a/review-webpage/main.css
+++ b/review-webpage/main.css
@@ -1,101 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,500;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap');
 
 body {
     background-color: #0a0a0a;
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
-   display: flex;
-   justify-content: center;
-}
 
+}
 
 header {
     background-color: #6495ED;
     padding: 2rem;
     text-align: right;
-    
+    color: #FAEBD7;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+a:active {
+    color: #DEB887;
 }
 
 header a {
     color: #FAEBD7;
+    margin: 0px 8px;
 }
 
-header a:hover {
-    color: #DEB887;
-    text-decoration: underline;
-}
 
 @media only screen and (min-width: 35em) {
+    body {
+        display: flex;
+        justify-content: center;
+    }
+
     body div {
         display: flex;
         margin: 0px;
     }
+
     nav ul {
-       padding:0px;
+        padding: 0px;
     }
+
     header {
-        width: 200px;
+        width: 190px;
     }
+
     article {
         margin: 1rem 2.5rem 2.5rem 2.5rem;
-        padding: 2.5rem;
+        
     }
-    img {
-       width: 330px;
-       }
-       main {
-        padding: 2.8rem;
-       }
+
+   
 }
 
 hr {
-    margin: 0px;
+    margin: 0px 0px 0px 5px;
+    margin-right: 5px;
+    margin-left: 0px;
 }
 
 h1 {
     padding: 0px;
-    color: #FAEBD7;
     font-family: Lora;
-    font-size: 2rem;
+
 
 }
 
 h2 {
     font-family: Lora;
-   margin-top: 0px;
-   padding-bottom: 1rem;
-   font-size: 1.5rem;
-   
+    margin-top: 0px;
+    padding-bottom: 1rem;
+    font-size: 1.7rem;
+
 }
+
 h2 a {
     color: black;
 }
-h2 a:active {
-    color: #DEB887;
-}
+
 
 h2 a:hover {
     text-decoration: underline;
+    color: #6495ED;
 }
 
+h2 a:active {
+    color: #DEB887;
+}
 
 
 
 nav ul {
     list-style: none;
     margin: 0px;
-    padding:1rem;
+    padding-top: .5rem;
+
 }
 
 nav ul li {
-    padding: .5rem;
+    padding: .4rem 0px;
     display: block;
-    font-size: 1rem;
-    font-size: 13px;
-}
-
-nav a:visited {
-    color: #FAEBD7;
+    font-size: 14px;
 }
 
 nav a:hover {
@@ -124,7 +132,7 @@ article {
 }
 
 .post-date {
-    color: darkgray;
+    color: rgb(131, 130, 130);
     margin: 0px;
     font-size: 15px;
     padding: 6px 0px;
@@ -135,19 +143,22 @@ figure {
 }
 
 img {
-width: 180px;
-padding-top: 2rem;
+    max-width: 95%;
+    padding-top: 2rem;
 }
+
 p {
-    font-size: .9rem;
+    font-size: 1rem;
 }
+
 p a {
-    color:#6495ED;
+    color: #6495ED;
 }
-p a:hoover {
+
+p a:hover {
     text-decoration: underline;
 }
-a {
-    text-decoration: none;
-    
+
+p a:active {
+    color: #DEB887;
 }
