--- a/review-webpage/main.css
+++ b/review-webpage/main.css
@@ -11,16 +11,10 @@ header {
     background-color: #6495ED;
     padding: 2rem;
     text-align: right;
-    color: #FAEBD7;
-
 }
 
 a {
     text-decoration: none;
-}
-
-a:active {
-    color: #DEB887;
 }
 
 header a {
@@ -28,7 +22,13 @@ header a {
     margin: 0px 8px;
 }
 
-
+header a:hover{
+    color: white;
+    text-decoration: underline;
+}
+header a:active {
+    color: #DEB887;
+}
 @media only screen and (min-width: 35em) {
     body {
         display: flex;
@@ -50,23 +50,19 @@ header a {
 
     article {
         margin: 1rem 2.5rem 2.5rem 2.5rem;
-        
+
     }
 
-   
 }
 
 hr {
     margin: 0px 0px 0px 5px;
-    margin-right: 5px;
-    margin-left: 0px;
+    
 }
 
 h1 {
     padding: 0px;
     font-family: Lora;
-
-
 }
 
 h2 {
@@ -74,13 +70,11 @@ h2 {
     margin-top: 0px;
     padding-bottom: 1rem;
     font-size: 1.7rem;
-
 }
 
 h2 a {
     color: black;
 }
-
 
 h2 a:hover {
     text-decoration: underline;
@@ -90,8 +84,6 @@ h2 a:hover {
 h2 a:active {
     color: #DEB887;
 }
-
-
 
 nav ul {
     list-style: none;
@@ -143,7 +135,7 @@ figure {
 }
 
 img {
-    max-width: 95%;
+    max-width: 92%;
     padding-top: 2rem;
 }
 
