--- a/review-webpage/main.css
+++ b/review-webpage/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap");
+/*VARIABLES*/
 body {
-  background-color: #0a0a0a;
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -31,7 +31,6 @@ header a:active {
     display: flex;
     justify-content: center;
   }
-
   body div {
     display: flex;
     margin: 0px;
@@ -64,15 +63,14 @@ h2 {
   padding-bottom: 1rem;
   font-size: 1.7rem;
 }
-
 h2 a {
   color: black;
 }
-h2 a :hover {
+h2 a:hover {
   text-decoration: underline;
   color: #6495ED;
 }
-h2 a :active {
+h2 a:active {
   color: #DEB887;
 }
 
@@ -129,14 +127,13 @@ img {
 p {
   font-size: 1rem;
 }
-
 p a {
   color: #6495ED;
 }
-p a :hover {
+p a:hover {
   text-decoration: underline;
 }
-p a :active {
+p a:active {
   color: #DEB887;
 }
 
